# conceptual_dictionary

./: CITATION.cff  README.md  _config.yml  _toc.yml  filled_template.yaml  index.md  pyproject.toml  tensile.in
.github/workflows/: deploy.yml
conceptual_dictionary/: __init__.py  conceptualdict.py  templates.py  vocabs.py
conceptual_dictionary/templates/: __init__.py  dataset.py  full.py  operations.py  property.py  sample.py  workflow.py
conceptual_dictionary/templates/defects/: __init__.py  complex.py  dislocation.py  grain_boundary.py  point_defects.py  stacking_fault.py
docs/: acknowledgements.md  api.rst  conceptualdict.md  examples.md  extending.md  gettingstarted.md  license.md  quickstart.md  templates.md  validation.md  vocabularies.md
examples/: examples.ipynb  grain_boundary.json  grain_boundary.yaml  single_structure_with_workflow.json  single_structure_with_workflow.yaml
tests/: test_conceptualdict.py  test_examples.py  test_imports.py  test_io.py  test_templates.py  test_validate.py
