[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conceptual-dictionary"
version = "0.3.1"
description = "A Python dictionary template for storing serializable metadata"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Sarath Menon"},
    {name = "Abril Azocar Guzman"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["dictionary", "metadata", "serialization", "conceptual"]

dependencies = [
    "pyyaml>=5.1",
    "numpy>=1.17",
]

[project.urls]
"Homepage" = "https://github.com/pyscal/conceptual_dictionary"
"Bug Tracker" = "https://github.com/pyscal/conceptual_dictionary/issues"

[tool.setuptools]
packages = ["conceptual_dictionary"]